@@ -2,8 +2,6 @@ package com.qrebl.users.service;
 
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.interfaces.DecodedJWT;
-import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.qrebl.users.config.Credentials;
 import com.qrebl.users.config.KeycloakConfig;
@@ -11,122 +9,102 @@ import com.qrebl.users.dto.AuthDto;
 import com.qrebl.users.dto.JwtDto;
 import com.qrebl.users.dto.LoginDto;
 import com.qrebl.users.dto.UserDto;
-import lombok.AllArgsConstructor;
 import lombok.RequiredArgsConstructor;
-import lombok.SneakyThrows;
 import org.keycloak.admin.client.Config;
 import org.keycloak.admin.client.resource.UsersResource;
 import org.keycloak.admin.client.token.TokenManager;
 import org.keycloak.representations.idm.CredentialRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
-import javax.annotation.PostConstruct;
-import java.util.*;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
+import java.util.Date;
+import java.util.List;
+import java.util.Map;
 
-@AllArgsConstructor
 @Service
 @RequiredArgsConstructor
 public class KeyCloakService {
-    private ModelMapper modelMapper;
-    private ObjectMapper objectMapper;
+    private final ObjectMapper objectMapper;
+    private final KeycloakConfig keycloakConfig;
 
-    @PostConstruct
-    public void init() {
-        modelMapper = new ModelMapper();
-        objectMapper = new ObjectMapper();
-        objectMapper.configure(JsonParser.Feature.IGNORE_UNDEFINED, true);
-    }
-
-    public void addUser(UserDto userDTO) {
-        CredentialRepresentation credential = Credentials
-                .createPasswordCredentials(userDTO.getPassword());
+    public void addUser(UserDto userDto) {
+        CredentialRepresentation credential = Credentials.createPasswordCredentials(userDto.getPassword());
         UserRepresentation user = new UserRepresentation();
+        user.setAttributes(Map.of(
+                "ssn", List.of("123456789"),
+                "mobileNr", List.of("123456789")));
+        user.setUsername(userDto.getUserName());
+        user.setFirstName(userDto.getFirstname());
+        user.setLastName(userDto.getLastName());
+        user.setEmail(userDto.getEmailId());
+        user.setEnabled(true);
+        user.setCredentials(List.of(credential));
 
-        Map<String, List<String>> attributes = new HashMap<>();
-
-        attributes.put("ssn", Collections.singletonList("123456789"));
-        attributes.put("mobileNr", Collections.singletonList("123456789"));
-
-        user.setAttributes(attributes);
-        user.setUsername(userDTO.getUserName());
-        user.setFirstName(userDTO.getFirstname());
-        user.setLastName(userDTO.getLastName());
-        user.setCredentials(Collections.singletonList(credential));
-
-        UsersResource instance = getInstance();
-        instance.create(user);
+        getInstance().create(user);
     }
 
     public List<UserRepresentation> getUser(String userName) {
-        UsersResource usersResource = getInstance();
-        List<UserRepresentation> user = usersResource.search(userName, true);
-        return user;
+        return getInstance().search(userName, true);
     }
 
-    public void updateUser(String userId, UserDto userDTO) {
-        CredentialRepresentation credential = Credentials
-                .createPasswordCredentials(userDTO.getPassword());
+    public void updateUser(String userId, UserDto userDto) {
         UserRepresentation user = new UserRepresentation();
-        user.setUsername(userDTO.getUserName());
-        user.setFirstName(userDTO.getFirstname());
-        user.setLastName(userDTO.getLastName());
-        user.setEmail(userDTO.getEmailId());
-        user.setCredentials(Collections.singletonList(credential));
+        user.setUsername(userDto.getUserName());
+        user.setFirstName(userDto.getFirstname());
+        user.setLastName(userDto.getLastName());
+        user.setEmail(userDto.getEmailId());
+        user.setCredentials(List.of(Credentials.createPasswordCredentials(userDto.getPassword())));
 
-        UsersResource usersResource = getInstance();
-        usersResource.get(userId).update(user);
+        getInstance().get(userId).update(user);
     }
 
     public void deleteUser(String userId) {
-        UsersResource usersResource = getInstance();
-        usersResource.get(userId)
-                .remove();
+        getInstance().get(userId).remove();
     }
 
     public AuthDto getToken(LoginDto loginDto) {
-        Config config = KeycloakConfig.newConfig();
-
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
-        modelMapper.map(loginDto, config);
-
-        TokenManager tokenManager = new TokenManager(config, KeycloakConfig.getResteasyClient());
-
+        Config config = keycloakConfig.newConfig(
+                loginDto.getRealm(),
+                loginDto.getUsername(),
+                loginDto.getPassword(),
+                loginDto.getClientId(),
+                loginDto.getClientSecret());
+        TokenManager tokenManager = new TokenManager(config, keycloakConfig.getResteasyClient());
         return convertToAuthDto(tokenManager);
     }
 
-    @SneakyThrows
     private AuthDto convertToAuthDto(TokenManager tokenManager) {
-        DecodedJWT jwt = JWT.decode(tokenManager.getAccessTokenString());
-        byte[] decodedBytes = Base64.getDecoder().decode(jwt.getPayload());
-        String decodedString = new String(decodedBytes);
-        JwtDto jwtDto = objectMapper.readValue(decodedString, JwtDto.class);
-        jwtDto.setAccessToken(jwt.getPayload());
-        return AuthDto.builder()
-                .accessToken(jwtDto.getAccessToken())
-                .expireTime(String.valueOf(new Date(Long.parseLong(jwtDto.getExpireTime()))))
-                .firstName(jwtDto.getFirstName())
-                .lastName(jwtDto.getLastName())
-                .scopes(jwtDto.getScopes())
-                .build();
+        String accessToken = tokenManager.getAccessTokenString();
+        DecodedJWT jwt = JWT.decode(accessToken);
+        try {
+            String payload = new String(
+                    Base64.getUrlDecoder().decode(jwt.getPayload()),
+                    StandardCharsets.UTF_8);
+            JwtDto jwtDto = objectMapper.readValue(payload, JwtDto.class);
+            Date expiresAt = jwt.getExpiresAt();
+            return AuthDto.builder()
+                    .accessToken(accessToken)
+                    .expireTime(expiresAt == null ? null : expiresAt.toString())
+                    .firstName(jwtDto.getFirstName())
+                    .lastName(jwtDto.getLastName())
+                    .scopes(jwtDto.getScopes())
+                    .build();
+        } catch (Exception exception) {
+            throw new IllegalStateException("Unable to decode the Keycloak access token", exception);
+        }
     }
 
     public void sendVerificationLink(String userId) {
-        UsersResource usersResource = getInstance();
-        usersResource.get(userId)
-                .sendVerifyEmail();
+        getInstance().get(userId).sendVerifyEmail();
     }
 
     public void sendResetPassword(String userId) {
-        UsersResource usersResource = getInstance();
-
-        usersResource.get(userId)
-                .executeActionsEmail(Arrays.asList("UPDATE_PASSWORD"));
+        getInstance().get(userId).executeActionsEmail(List.of("UPDATE_PASSWORD"));
     }
 
-    public UsersResource getInstance() {
-        return KeycloakConfig.getInstance().realm(KeycloakConfig.realm).users();
+    private UsersResource getInstance() {
+        return keycloakConfig.getInstance().realm(keycloakConfig.getConfiguredRealm()).users();
     }
 }
